<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AboutScreen"
    android:background="#118cb8">
    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_screen"
                    android:id="@+id/textView2"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:width="@dimen/activity_horizontal_margin"
                    android:layout_alignParentTop="true"
                    android:layout_alignLeft="@+id/textView"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/version"
                    android:id="@+id/textView3"
                    android:layout_above="@+id/imageView"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"/>

            <Space
                    android:layout_width="fill_parent"
                    android:layout_height="100px"
                    android:id="@+id/space"/>

            <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:src="@drawable/ic_load"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center"
                    android:layout_below="@+id/scrollView"
                    android:layout_alignParentRight="true"
                    android:layout_weight="1"/>

            <Space
                    android:layout_width="fill_parent"
                    android:layout_height="100px"
                    />

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/copyright_message"
                    android:id="@+id/textView"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
